--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
 welcome.message: Java Sample
+
+customerdashdb.driverclassname=oracle.jdbc.driver.OracleDriver
+customerdashdb.username=system
+customerdashdb.password=password
+customerdashdb.url=jdbc:oracle:thin:@localhost:1521:xe
