Added properties everyone can use for JDBC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix: .jsp
 
 welcome.message: Java Sample
 
-customerdashdb.driverclassname=oracle.jdbc.driver.OracleDriver
-customerdashdb.username=system
-customerdashdb.password=password
-customerdashdb.url=jdbc:oracle:thin:@localhost:1521:xe
+db.driverclassname=oracle.jdbc.driver.OracleDriver
+db.username=system
+db.password=password
+db.url=jdbc:oracle:thin:@localhost:1521:xe
