--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,5 @@ welcome.message: Java Sample
 db.driverclassname=oracle.jdbc.driver.OracleDriver
 db.username=system
 db.password=password
-db.url=jdbc:oracle:thin:@localhost:1521:xe
+db.usrl=jdbc:oracle:thin:@localhost:1521:xe
 
-spring.datasource.url=jdbc:mysql://localhost:3306/loan_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
