--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ target
 .settings/org.eclipse.core.resources.prefs
 .settings/org.eclipse.jdt.core.prefs
 /bin/
+src/main/resources/application.properties
+pom.xml
