--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ db.driverclassname=oracle.jdbc.driver.OracleDriver
 db.username=system
 db.password=password
 db.usrl=jdbc:oracle:thin:@localhost:1521:xe
-
+db.tablename=\"USERLIST\"
