--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,4 @@ welcome.message: Java Sample
 db.driverclassname=oracle.jdbc.driver.OracleDriver
 db.username=system
 db.password=password
-db.usrl=jdbc:oracle:thin:@localhost:1521:xe
-db.tablename=\"USERLIST\"
+db.url=jdbc:oracle:thin:@localhost:1521:xe
