--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ target
 .settings/org.eclipse.core.resources.prefs
 .settings/org.eclipse.jdt.core.prefs
 src/main/resources/application.properties
+src/main/resources/application.properties
